--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,3 +154,29 @@ jobs:
 
             - run: bash ./tests/drupal_test.sh
               shell: "bash"
+
+    phpstan:
+        name: "PHPStan"
+
+        runs-on: 'ubuntu-latest'
+
+        strategy:
+            matrix:
+                php-version:
+                    - '8.4'
+
+        steps:
+            - name: "Checkout code"
+              uses: actions/checkout@v4
+
+            - name: "Install PHP with extensions"
+              uses: shivammathur/setup-php@v2
+              with:
+                  coverage: "none"
+                  php-version: ${{ matrix.php-version }}
+                  ini-values: memory_limit=-1
+
+            - run: composer install
+
+            - name: "Run tests"
+              run: vendor/bin/phpstan
