--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,8 +2,9 @@ includes:
     - phpstan-baseline.neon
 
 parameters:
-    level: 3
+    level: 4
     paths:
         - src
     excludePaths:
         - src/Test
+    treatPhpDocTypesAsCertain: false
